test/spec/imports.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/imports.wast
(;; STDOUT ;;;
called host spectest.print_i32(i32:13) =>
called host spectest.print_i32_f32(i32:14, f32:42.000000) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_f32(f32:13.000000) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_i64(i64:24) =>
called host spectest.print_f64_f64(f64:25.000000, f64:53.000000) =>
called host spectest.print_i64(i64:24) =>
called host spectest.print_f64(f64:24.000000) =>
called host spectest.print_f64(f64:24.000000) =>
called host spectest.print_f64(f64:24.000000) =>
out/test/spec/imports.wast:89: assert_invalid passed:
  out/test/spec/imports/imports.2.wasm:000001e: error: function type variable out of range: 1 (max 1)
  000001e: error: OnImportFunc callback failed
called host spectest.print_i32(i32:13) =>
out/test/spec/imports.wast:125: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/imports.wast:129: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/imports.wast:134: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:138: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:142: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:146: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:150: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:154: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:158: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:162: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:166: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:170: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:174: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:178: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:182: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:186: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:190: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:194: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/imports.wast:199: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind func, not global
out/test/spec/imports.wast:203: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind func, not table
out/test/spec/imports.wast:207: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind func, not memory
out/test/spec/imports.wast:211: assert_unlinkable passed:
  error: expected import "spectest.global_i32" to have kind func, not global
out/test/spec/imports.wast:215: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind func, not table
out/test/spec/imports.wast:219: assert_unlinkable passed:
  error: expected import "spectest.memory" to have kind func, not memory
out/test/spec/imports.wast:253: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/imports.wast:257: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/imports.wast:262: assert_unlinkable passed:
  error: type mismatch in imported global, expected i64 but got i32.
out/test/spec/imports.wast:266: assert_unlinkable passed:
  error: type mismatch in imported global, expected f32 but got i32.
out/test/spec/imports.wast:270: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got i32.
out/test/spec/imports.wast:274: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected immutable but got mutable.
out/test/spec/imports.wast:278: assert_unlinkable passed:
  error: type mismatch in imported global, expected i32 but got f32.
out/test/spec/imports.wast:282: assert_unlinkable passed:
  error: type mismatch in imported global, expected i64 but got f32.
out/test/spec/imports.wast:286: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got f32.
out/test/spec/imports.wast:290: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected immutable but got mutable.
out/test/spec/imports.wast:294: assert_unlinkable passed:
  error: type mismatch in imported global, expected i32 but got i64.
out/test/spec/imports.wast:298: assert_unlinkable passed:
  error: type mismatch in imported global, expected f32 but got i64.
out/test/spec/imports.wast:302: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got i64.
out/test/spec/imports.wast:306: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected mutable but got immutable.
out/test/spec/imports.wast:311: assert_unlinkable passed:
  error: expected import "test.func" to have kind global, not func
out/test/spec/imports.wast:315: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind global, not table
out/test/spec/imports.wast:319: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind global, not memory
out/test/spec/imports.wast:323: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind global, not func
out/test/spec/imports.wast:327: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind global, not table
out/test/spec/imports.wast:331: assert_unlinkable passed:
  error: expected import "spectest.memory" to have kind global, not memory
out/test/spec/imports.wast:350: assert_trap passed: uninitialized table element
out/test/spec/imports.wast:353: assert_trap passed: uninitialized table element
out/test/spec/imports.wast:354: assert_trap passed: undefined table index
out/test/spec/imports.wast:369: assert_trap passed: uninitialized table element
out/test/spec/imports.wast:372: assert_trap passed: uninitialized table element
out/test/spec/imports.wast:373: assert_trap passed: undefined table index
out/test/spec/imports.wast:405: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/imports.wast:409: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/imports.wast:414: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/imports.wast:418: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (20)
out/test/spec/imports.wast:422: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/imports.wast:426: assert_unlinkable passed:
  error: max size (20) larger than declared (18)
out/test/spec/imports.wast:430: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/imports.wast:434: assert_unlinkable passed:
  error: max size (20) larger than declared (15)
out/test/spec/imports.wast:439: assert_unlinkable passed:
  error: expected import "test.func" to have kind table, not func
out/test/spec/imports.wast:443: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind table, not global
out/test/spec/imports.wast:447: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind table, not memory
out/test/spec/imports.wast:451: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind table, not func
out/test/spec/imports.wast:469: assert_trap passed: out of bounds memory access: access at 1000000+4 >= max value 65536
out/test/spec/imports.wast:480: assert_trap passed: out of bounds memory access: access at 1000000+4 >= max value 65536
out/test/spec/imports.wast:483: assert_invalid passed:
  out/test/spec/imports/imports.97.wasm:0000015: error: only one memory block allowed
  0000015: error: OnImportMemory callback failed
out/test/spec/imports.wast:487: assert_invalid passed:
  out/test/spec/imports/imports.98.wasm:0000015: error: only one memory block allowed
  0000015: error: OnMemory callback failed
out/test/spec/imports.wast:491: assert_invalid passed:
  out/test/spec/imports/imports.99.wasm:000000f: error: only one memory block allowed
  000000f: error: OnMemory callback failed
out/test/spec/imports.wast:506: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/imports.wast:510: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/imports.wast:515: assert_unlinkable passed:
  error: actual size (2) smaller than declared (3)
out/test/spec/imports.wast:519: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (3)
out/test/spec/imports.wast:523: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
out/test/spec/imports.wast:527: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
out/test/spec/imports.wast:532: assert_unlinkable passed:
  error: expected import "test.func-i32" to have kind memory, not func
out/test/spec/imports.wast:536: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind memory, not global
out/test/spec/imports.wast:540: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind memory, not table
out/test/spec/imports.wast:544: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind memory, not func
out/test/spec/imports.wast:548: assert_unlinkable passed:
  error: expected import "spectest.global_i32" to have kind memory, not global
out/test/spec/imports.wast:552: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind memory, not table
out/test/spec/imports.wast:557: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
out/test/spec/imports.wast:561: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
out/test/spec/imports.wast:599: assert_malformed passed:
  out/test/spec/imports/imports.127.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (func))
          ^^^^^^
out/test/spec/imports.wast:603: assert_malformed passed:
  out/test/spec/imports/imports.128.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (global i64))
          ^^^^^^
out/test/spec/imports.wast:607: assert_malformed passed:
  out/test/spec/imports/imports.129.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (table 0 funcref))
          ^^^^^^
out/test/spec/imports.wast:611: assert_malformed passed:
  out/test/spec/imports/imports.130.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (memory 0))
          ^^^^^^
out/test/spec/imports.wast:616: assert_malformed passed:
  out/test/spec/imports/imports.131.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (func))
                              ^^^^^^
out/test/spec/imports.wast:620: assert_malformed passed:
  out/test/spec/imports/imports.132.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (global f32))
                              ^^^^^^
out/test/spec/imports.wast:624: assert_malformed passed:
  out/test/spec/imports/imports.133.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (table 0 funcref))
                              ^^^^^^
out/test/spec/imports.wast:628: assert_malformed passed:
  out/test/spec/imports/imports.134.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (memory 0))
                              ^^^^^^
out/test/spec/imports.wast:633: assert_malformed passed:
  out/test/spec/imports/imports.135.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (func))
                     ^^^^^^
out/test/spec/imports.wast:637: assert_malformed passed:
  out/test/spec/imports/imports.136.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (global i32))
                     ^^^^^^
out/test/spec/imports.wast:641: assert_malformed passed:
  out/test/spec/imports/imports.137.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (table 0 funcref))
                     ^^^^^^
out/test/spec/imports.wast:645: assert_malformed passed:
  out/test/spec/imports/imports.138.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (memory 0))
                     ^^^^^^
out/test/spec/imports.wast:650: assert_malformed passed:
  out/test/spec/imports/imports.139.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (func))
              ^^^^^^
out/test/spec/imports.wast:654: assert_malformed passed:
  out/test/spec/imports/imports.140.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (global i32))
              ^^^^^^
out/test/spec/imports.wast:658: assert_malformed passed:
  out/test/spec/imports/imports.141.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (table 1 3 funcref))
              ^^^^^^
out/test/spec/imports.wast:662: assert_malformed passed:
  out/test/spec/imports/imports.142.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (memory 1 2))
              ^^^^^^
out/test/spec/imports.wast:672: assert_unlinkable passed:
  error: invalid import "not wasm.overloaded"
179/179 tests passed.
;;; STDOUT ;;)
